<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RolesActivity">

    <Button
        android:id="@+id/btColeccionista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_boton_coleccionista" />

    <Button
        android:id="@+id/btUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/app_boton_usuario" />

</LinearLayout>